--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "lucide-react": "^0.475.0",
+    "react-data-grid": "^7.0.0-beta.48",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1"
   }
